# hyperliquid-telegram

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
migrations/: 20241201000000_init.sql  20241202000000_positions.sql
src/: bot.rs  db.rs  hyperliquid.rs  logging.rs  main.rs
