[package]
name = "hyperliquid-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
fern = { version = "0.7", features = ["colored"] }
log = "0.4"
chrono = "0.4"
anyhow = "1"
